test/kobra-code/semantic-errors/bad-continue-statement.ks
$ i = 0
while (i < 4):
  i++
end
continue
